--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
 theme = "hugo-initio"
-baseURL = "http://satuma-portfolio.xyz/"
+baseURL = "https://satuma-portfolio.xyz"
 languageCode = "CJK"
 title = "Shota Saito"
 publishDir = "docs"
+canonifyurls = true
 
 [params]
     name = "Shota Saito"
